data/derived/comb/progs/unify/prog8767.ml.out
Characters 67-89:
  | h::t -> matchHeads (explode w);;
            ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type char list
       but an expression was expected of type bool
